postgres.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  labels:
    app: postgres
spec:
  type: NodePort
  ports:
  - port: 5432
    protocol: TCP
    nodePort: 5432
  selector:
   app: postgres
