poll.ingress.yaml
#apiVersion: networking.k8s.io/v1beta1
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: poll-ingress
  namespace: default
  ## read explanation 
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.frontend.passHostHeader: "true"
    traefik.backend.loadbalancer.sticky: "true"
    ##
spec:
#   tls:
#   - hosts:
#     - cafe.example.com
  rules:
   - host: poll.dop.io
    http:
      paths:
      - path: /poll
        backend:
          serviceName: poll-service
          servicePort: 80
